--- a/src/App.css
+++ b/src/App.css
@@ -84,7 +84,8 @@ input {
   justify-content: center;
   align-items: center;
   padding: 7px;
-  margin-bottom: 7px
+  margin-bottom: 7px;
+  border-radius: 7px;
 }
 
 .App-link {
