--- a/src/App.css
+++ b/src/App.css
@@ -58,7 +58,7 @@ input {
   align-items: center
 }
 
-.button{
+.btn{
   display: flex;
   flex: 0.4;
   height: 40px;
@@ -79,7 +79,17 @@ input {
 }
 
 .err{
-  background-color: red;
+  background-color: rgb(156, 65, 65);
+  font-size: 14;
+  justify-content: center;
+  align-items: center;
+  padding: 7px;
+  margin-bottom: 7px;
+  border-radius: 7px;
+}
+
+.resp{
+  background-color: rgb(96, 119, 61);
   font-size: 14;
   justify-content: center;
   align-items: center;
